Reorganized file structure
Created a home and timeline dir.
Added appropriate files to the dirs.
Removed code from the app files.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<h1>Bragging Rights : The Things I've Done</h1>
-<div class="bragger-div">
-  <button class="bragger-btn" *ngFor="let bragger of braggers">{{bragger.name}}</button>
-</div>
+<home></home>
 
