--- a/src/home/home.css
+++ b/src/home/home.css
@@ -13,9 +13,13 @@ h1 {
     padding-top: 10px;
 }
 
-.bragger-btn {
-    margin: 0px 20px;
-    width: 100px;
-    height: 50px;
-    font-size: 20px;
+.mdc-button--raised {
+    border-width: 0;
+    background-color: white;
+    color: black;
+    font-size: 14pt;
+    height: 36px;
+    padding: 0 16px;
+    border-radius: 2px;
+    margin: 6px 8px;
 }
