--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@material/button/dist/mdc.button.css";
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
