--- a/src/timeline/timeline.css
+++ b/src/timeline/timeline.css
@@ -1,21 +1,25 @@
 .mdc-button {
-    font-size: 24pt;
-    color: black;
+    color: #666;
+    margin-top: 5px;
 }
 
 .timeline-grid {
     display: flex;
+    margin-top: 25px;
 }
 
 .emojis {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 25px 0;
+    padding: 10px 0 30px 0;
+    color: #666;
+    margin-left: 19px;
 }
 
 i {
     font-size: 24pt;
+    vertical-align: middle;
 }
 
 canvas {
