--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,7 +1,24 @@
+.title-div {
+    margin-left: auto;
+    margin-right: auto;
+    width: 424px;
+}
+
 h1 {
     font-weight: lighter;
     text-align: center;
     letter-spacing: 3px;
+    font-size: 52px;
+    margin-bottom: 0;
+    color: #005EB8;
+}
+
+h3 {
+    font-weight: lighter;
+    font-size: 20px;
+    padding-right: 10px;
+    text-align: right;
+    color: #005EB8;
 }
 
 .bragger-div {
