--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
 @import "../node_modules/font-awesome/css/font-awesome.css";
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
 }
