--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -5,13 +5,17 @@
   </div>
 
   <div class="bragger-div">
-      <button class="mdc-button--raised" *ngFor="let bragger of braggers" (click)="goToTimeline($event)">
-          <img src="./../../assets/img/Shae.JPG">
-          <div>
-            <p>{{bragger.name}}</p>
-            <p>{{bragger.jobTitle}}</p>
-            <p>Career length: {{bragger.careerLength}}+</p>
-          </div>
-        </button>
+    <button class="mdc-button--raised" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
+        <div class="img-div">
+          <img src="./../../assets/img/{{bragger.imgName}}">
+        </div>  
+        
+        <div class="bragger-info-div">
+          <p class="bragger-name">{{bragger.name}}</p>
+          <p>{{bragger.jobTitle}}</p>
+          <p>{{bragger.bu}}</p>
+          <p>Career length: {{bragger.careerLength}}+</p>
+        </div>
+      </button>
   </div>
 </div>
