Added Bragger data and styled Timeline
Styled Timeline page -- still working on it
Added Amy and Paula bragger data

--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -1,5 +1,5 @@
 .mdc-button {
-    color: #666;
+    color: #63666A;
     margin-top: 5px;
 }
 
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 10px 0 30px 0;
-    color: #666;
+    color: #63666A;
     margin-left: 19px;
 }
 
