--- a/src/components/timeline/timeline.html
+++ b/src/components/timeline/timeline.html
@@ -7,5 +7,5 @@
     <i class="fa fa-meh-o" aria-hidden="true"></i>
     <i class="fa fa-frown-o" aria-hidden="true"></i>
   </div>
-  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [data]="yAxis" [legend]="chartLegend" [options]="chartOptions" [colors]="chartColors"></canvas>
+  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [datasets]="yAxis" [options]="chartOptions" [colors]="chartColors"></canvas>
 </div>
