--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #005EB8;
 }
 
 h1 {
@@ -11,6 +10,7 @@ h1 {
     letter-spacing: 3px;
     font-size: 52px;
     margin-bottom: 0;
+    color: #005EB8;
 }
 
 h3 {
@@ -18,6 +18,7 @@ h3 {
     font-size: 20px;
     padding-right: 10px;
     text-align: right;
+    color: #00B5E2
 }
 
 .bragger-div {
