--- a/src/components/timeline/timeline.html
+++ b/src/components/timeline/timeline.html
@@ -1,11 +1,17 @@
 <button class="mdc-button" (click)="goHome()">
     <i class="fa fa-home" aria-hidden="true"></i>
 </button>
-<div class="timeline-grid">
+<div class="timeline-grid" (window:keydown)="traverseTimeline($event.key)">
   <div class="emojis">
     <i class="fa fa-smile-o" aria-hidden="true"></i>
     <i class="fa fa-meh-o" aria-hidden="true"></i>
     <i class="fa fa-frown-o" aria-hidden="true"></i>
   </div>
-  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [datasets]="yAxis" [options]="chartOptions" [colors]="chartColors"></canvas>
+  <canvas 
+    baseChart [chartType]="chartType" 
+    [labels]="xAxis" 
+    [datasets]="yAxis" 
+    [options]="chartOptions" 
+    [colors]="chartColors">
+</canvas>
 </div>
