--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px 0 30px 0;
+    padding: 30px 0;
     color: #63666A;
     margin-left: 19px;
 }
