--- a/src/components/timeline/timeline.html
+++ b/src/components/timeline/timeline.html
@@ -1,5 +1,6 @@
 <button class="mdc-button" (click)="goHome()">
     <i class="fa fa-home" aria-hidden="true"></i>
+    <span>Home</span>
 </button>
 <div class="timeline-grid" (window:keydown)="traverseTimeline($event.key)">
   <div class="emojis">
@@ -7,11 +8,6 @@
     <i class="fa fa-meh-o" aria-hidden="true"></i>
     <i class="fa fa-frown-o" aria-hidden="true"></i>
   </div>
-  <canvas 
-    baseChart [chartType]="chartType" 
-    [labels]="xAxis" 
-    [datasets]="yAxis" 
-    [options]="chartOptions" 
-    [colors]="chartColors">
+  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [datasets]="yAxis" [options]="chartOptions" [colors]="chartColors">
 </canvas>
 </div>
