Added button for input on braggers page
Added a button that will open an input page.
The input page is where braggers can input information
and be added as a bragger.

--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -1,8 +1,6 @@
 <div class="home-page">
-  <div class="title-div">
-    <h1>Bragging Rights</h1>
-    <h3>My Highs and Lows </h3>
-  </div>
+  
+  <title></title>
 
   <div class="bragger-div">
     <button class="mdc-button--raised" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
