--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,21 +4,8 @@
     align-items: center;
 }
 
-h1 {
-    font-weight: lighter;
-    text-align: center;
-    letter-spacing: 3px;
-    font-size: 52px;
-    margin-bottom: 0;
-    color: #005EB8;
-}
-
-h3 {
-    font-weight: lighter;
-    font-size: 20px;
-    padding-right: 10px;
-    text-align: right;
-    color: #00B5E2
+title {
+    display: block;
 }
 
 .bragger-div {
