--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,7 +8,7 @@ title {
     display: block;
 }
 
-.bragger-div {
+.home-div {
     display: flex;
     margin: 20px;
     width: 100%;
@@ -18,11 +18,13 @@ title {
 .mdc-button--raised {
     border-width: 0;
     background-color: white;
-    min-height: 300px;
-    min-width: 450px;
+    height: 200px;
+    width: 350px;
     margin: 10px;
     color: #63666A;
-    display: flex;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .mdc-button--raised:focus {
