--- a/src/components/braggers/braggers.html
+++ b/src/components/braggers/braggers.html
@@ -2,10 +2,10 @@
 
     <title></title>
 
-    <button class="mdc-button--raised" (click)="goToInput()">Become a bragger</button>
+    <button class="mdc-button--raised input-btn" (click)="goToInput()">Become a bragger</button>
 
     <div class="bragger-div">
-        <button class="mdc-button--raised" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
+        <button class="mdc-button--raised bragger-btn" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
             <div class="img-div">
               <img src="./../../assets/img/{{bragger.imgName}}">
             </div>  
