--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -2,6 +2,6 @@
   <title></title>
   <div class="home-div">
     <button class="mdc-button--raised" (click)="goToSessions()">Sessions</button>
-    <button class="mdc-button--raised" (click)="goToBraggers()">Braggers</button>
+    <button class="mdc-button--raised" (click)="goToBraggers(braggers)">Braggers</button>
   </div>
 </div>
