--- a/src/components/braggers/braggers.css
+++ b/src/components/braggers/braggers.css
@@ -12,7 +12,7 @@ title {
     display: flex;
     margin: 20px;
     width: 100%;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .input-btn {
