Added a menu bar at the top of the page

--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -1,4 +1,5 @@
 <div class="home-page">
+  <menu></menu>
   <title></title>
   <div class="home-div">
     <button class="mdc-button--raised" (click)="goToSessions()">Sessions</button>
