Cleaned up code
Made files look similar to one another.
Removed unused code.
Added menu to other pages.
Linked bragger data to braggers page.

--- a/src/components/timeline/timeline.html
+++ b/src/components/timeline/timeline.html
@@ -1,13 +1,9 @@
-<button class="mdc-button" (click)="goHome()">
-    <i class="fa fa-home" aria-hidden="true"></i>
-    <span>Home</span>
-</button>
+<menu></menu>
 <div class="timeline-grid" (window:keydown)="traverseTimeline($event.key)">
   <div class="emojis">
     <i class="fa fa-smile-o" aria-hidden="true"></i>
     <i class="fa fa-meh-o" aria-hidden="true"></i>
     <i class="fa fa-frown-o" aria-hidden="true"></i>
   </div>
-  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [datasets]="yAxis" [options]="chartOptions" [colors]="chartColors">
-</canvas>
+  <canvas baseChart [chartType]="chartType" [labels]="xAxis" [datasets]="yAxis" [options]="chartOptions" [colors]="chartColors"></canvas>
 </div>
