--- a/src/components/braggers/braggers.html
+++ b/src/components/braggers/braggers.html
@@ -1,15 +1,11 @@
 <div class="braggers-page">
-
+    <menu></menu>
     <title></title>
-
-    <button class="mdc-button--raised input-btn" (click)="goToInput()">Become a bragger</button>
-
     <div class="bragger-div">
         <button class="mdc-button--raised bragger-btn" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
             <div class="img-div">
               <img src="./../../assets/img/{{bragger.imgName}}">
             </div>  
-            
             <div class="bragger-info-div">
               <p class="bragger-name">{{bragger.name}}</p>
               <p>{{bragger.jobTitle}}</p>
