--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -1,8 +1,5 @@
 <div class="home-page">
   <menu></menu>
   <title></title>
-  <div class="home-div">
-    <button class="mdc-button--raised" (click)="goToSessions()">Sessions</button>
-    <button class="mdc-button--raised" (click)="goToBraggers(braggers)">Braggers</button>
-  </div>
+  <div class="home-div"></div>
 </div>
