--- a/src/components/braggers/braggers.css
+++ b/src/components/braggers/braggers.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 title {
@@ -10,24 +11,15 @@ title {
 
 .bragger-div {
     display: flex;
-    margin: 20px;
-    width: 100%;
+    margin-top: 20px;
     flex-wrap: wrap;
+    width: 1410px;
 }
 
-.input-btn {
-    background-color: #005EB8;
-    color: white;
-    align-self: flex-start;
-    font-size: 20px;
-    font-weight: 200;
-    margin-left: 20px;
-    height: 45px;
-    padding: 10px;
-}
-
-.bragger-btn {
+.mdc-button--raised {
     display: flex;
+    border-width: 0;
+    margin: 10px;
     background-color: white;
     min-height: 300px;
     min-width: 450px;
@@ -35,11 +27,6 @@ title {
     text-align: left;
     font-size: 20px;
     font-weight: 500;
-}
-
-.mdc-button--raised {
-    border-width: 0;
-    margin: 10px;
 }
 
 .mdc-button--raised:focus {
