--- a/src/components/braggers/braggers.html
+++ b/src/components/braggers/braggers.html
@@ -2,7 +2,7 @@
     <menu></menu>
     <title></title>
     <div class="bragger-div">
-        <button class="mdc-button--raised bragger-btn" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
+        <button class="mdc-button--raised" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
             <div class="img-div">
               <img src="./../../assets/img/{{bragger.imgName}}">
             </div>  
