Styled menu and added session field
Styled the menu that appears on all pages.
Still need to add a focus to the buttons.
Added session field for future reference.

--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -1,17 +1,11 @@
-.mdc-button {
-    color: #63666A;
-    margin-top: 5px;
-    font-size: 16px;
-}
-
-.mdc-button span {
-    padding: 5px;
-    vertical-align: sub;
-}
-
 .timeline-grid {
     display: flex;
     margin-top: 25px;
+}
+
+menu {
+    width: 100%;
+    padding: 0;
 }
 
 .emojis {
