--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+menu {
+    width: 100%;
+    padding: 0;
+}
+
 title {
     display: block;
 }
@@ -14,9 +19,3 @@ title {
     width: 100%;
     justify-content: center;
 }
-
-
-.mdc-button--raised:focus {
-    outline: none;
-    border: 0;
- }
