--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@material/button/dist/mdc.button.css";
+@import "../node_modules/@material/textfield/dist/mdc.textfield.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 
 body {
