Disabled features that are currently in development

--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,15 +1,7 @@
 <div class="menu-div">
     <button id="home" class="mdc-button" (click)="goHome()">Home</button>
-    <button id="sessions" class="mdc-button" (click)="goToSessions()">Sessions</button>
+    <button id="sessions" class="mdc-button disabled" (click)="goToSessions()" disabled>Sessions</button>
     <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
-    <button id="become" class="mdc-button" (click)="goToBecome()">Become a Bragger</button>
-    <button id="suggest" class="mdc-button" (click)="goToSuggest()">Suggest a Bragger</button>
+    <button id="become" class="mdc-button disabled" (click)="goToBecome()" disabled>Become a Bragger</button>
+    <button id="suggest" class="mdc-button disabled" (click)="goToSuggest()" disabled>Suggest a Bragger</button>
 </div>
-
-<!-- <div class="menu-div">
-    <button id="home" class="mdc-button" (click)="goHome()">Home</button>
-    <button id="sessions" class="mdc-button" (click)="goToSessions()">Sessions</button>
-    <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
-    <button id="become" class="mdc-button" (click)="goToBecome()">Become a Bragger</button>
-    <button id="suggest" class="mdc-button" (click)="goToSuggest()">Suggest a Bragger</button>
-</div> -->
