--- a/src/components/braggers/braggers.html
+++ b/src/components/braggers/braggers.html
@@ -4,7 +4,7 @@
     <div class="bragger-div">
         <button class="mdc-button--raised" *ngFor="let bragger of braggers" (click)="goToTimeline(bragger)">
             <div class="img-div">
-              <img src="./../../assets/img/{{bragger.imgName}}">
+              <img src="./assets/img/{{bragger.imgName}}">
             </div>  
             <div class="bragger-info-div">
               <p class="bragger-name">{{bragger.name}}</p>
