--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -2,6 +2,5 @@
     <button id="home" class="mdc-button" (click)="goHome()">Home</button>
     <button id="sessions" class="mdc-button disabled" (click)="goToSessions()" disabled>Sessions</button>
     <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
-    <button id="become" class="mdc-button disabled" (click)="goToBecome()" disabled>Become a Bragger</button>
-    <button id="suggest" class="mdc-button disabled" (click)="goToSuggest()" disabled>Suggest a Bragger</button>
+    <button id="join" class="mdc-button" (click)="goToJoin()">Join the Brag</button>
 </div>
