--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -4,7 +4,7 @@ h1 {
     letter-spacing: 3px;
     font-size: 52px;
     margin-bottom: 0;
-    color: #005EB8;
+    color: var(--primary-blue);
 }
 
 h3 {
@@ -12,5 +12,5 @@ h3 {
     font-size: 20px;
     padding-right: 10px;
     text-align: right;
-    color: #00B5E2
+    color: var(--secondary-blue);
 }
