--- a/src/components/join-the-brag/join-the-brag.css
+++ b/src/components/join-the-brag/join-the-brag.css
@@ -1,4 +1,4 @@
-.become-a-bragger-page {
+.join-the-brag-page {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +13,30 @@ title {
     display: block;
 }
 
+.buttons-div {
+    font-size: 1.125em;
+    font-weight: lighter;
+    color: var(--primary-grey);
+ }
+
+ .mdc-button {
+    border-width: 0;
+    margin: 10px;
+    color: var(--secondary-blue);
+    font-size: 18px;
+    font-weight: lighter;
+}
+
+.mdc-button:focus {
+    outline: none;
+    border: 0;
+ }
+
+ .active {
+    color: white;
+    background: var(--secondary-blue);
+ }
+
 .form-div {
     display: flex;
     flex-direction: column;
@@ -21,17 +45,46 @@ title {
     align-items: center;
 }
 
-label {
-    width: 80%;
+.form-info-div {
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+h3 {
+    color: var(--primary-grey);
+    font-weight: 500;
+    font-size: 1.125em;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.mdc-text-field {
+    width: 100%;
+}
+
+.mdc-text-field:hover > span {
+    color: var(--secondary-blue);
+}
+
+.mdc-text-field__input:hover {
+    border-color: var(--secondary-blue);
+}
+
+.mdc-text-field__input:focus {
+    border-color: var(--secondary-blue);
+}
+
+.mdc-text-field__label--float-above {
+    color: var(--secondary-blue);
 }
 
 .mdc-button--raised {
     border-width: 0;
     margin: 10px;
-    background-color: #005EB8;
+    background-color: var(--primary-blue);
     color: white;
-    font-size: 20px;
-    font-weight: 200px;
+    font-size: 1.125em;
+    font-weight: lighter;
     width: 100px;
     height: 40px;
 }
@@ -41,21 +94,10 @@ label {
     border: 0;
  }
 
- .mdc-button {
-    border-width: 0;
-    margin: 10px;
-    color: var(--primary-grey);
-    font-size: 1.125em;
-    font-weight: lighter;
+ .disabled-txt {
+    color:  var(--secondary-grey);
 }
 
-.mdc-button:focus {
-    outline: none;
-    border: 0;
- }
-
- .buttons-div {
-    font-size: 1.125em;
-    font-weight: lighter;
-    color: var(--primary-grey);
- }
+.disabled-btn {
+    background-color: var(--secondary-grey);
+}
