--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,5 +1,5 @@
 <div class="menu-div">
-    <button id="home" class="mdc-button" (click)="goHome()">About</button>
+    <button id="home" class="mdc-button" (click)="goHome()">Home</button>
     <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
     <button id="join" class="mdc-button" (click)="goToJoin()">Join the Brag</button>
 </div>
