--- a/src/components/join-the-brag/join-the-brag.html
+++ b/src/components/join-the-brag/join-the-brag.html
@@ -2,7 +2,7 @@
   <menu></menu>
   <title></title>
   <div class="buttons-div">
-    <button id="become" class="mdc-button active" (click)="becomeABragger()">Become a bragger</button>
+    <button id="become" class="mdc-button active-btn" (click)="becomeABragger()">Become a bragger</button>
     <button id="suggest" class="mdc-button" (click)="suggestABragger()">Suggest a bragger</button>
   </div>
   <div class="form-div">
