Added text area
Added text area to input reason for nomination.
Styled text area.
Refactored onFocus and onBlur to include text area.

--- a/src/components/join-the-brag/join-the-brag.css
+++ b/src/components/join-the-brag/join-the-brag.css
@@ -82,6 +82,14 @@ h3 {
     border-color: var(--secondary-blue);
 }
 
+.mdc-text-field--textarea:hover {
+    border-color: var(--secondary-blue);
+}
+
+.mdc-text-field--textarea.mdc-text-field--focused {
+    border-color: var(--secondary-blue);
+}
+
 .mdc-button--raised {
     border-width: 0;
     margin: 10px;
