Changed div to form for validity purposes

--- a/src/components/join-the-brag/join-the-brag.css
+++ b/src/components/join-the-brag/join-the-brag.css
@@ -37,7 +37,7 @@ title {
     background: var(--secondary-blue);
  }
 
-.form-div {
+form {
     display: flex;
     flex-direction: column;
     margin: 20px;
