--- a/src/components/join-the-brag/join-the-brag.html
+++ b/src/components/join-the-brag/join-the-brag.html
@@ -14,7 +14,7 @@
                pattern="[A-Za-z]{2,}"
                (focus)="onFocus($event)" 
                (blur)="onBlur($event)" 
-               (keyup)="checkValidity($event)"
+               (change)="checkValidity($event)"
                required>
         <span class="mdc-text-field__label">First Name</span>  
       </label>
@@ -24,7 +24,7 @@
                pattern="[A-Za-z]{2,}"
                (focus)="onFocus($event)" 
                (blur)="onBlur($event)"
-               (keyup)="checkValidity($event)" 
+               (change)="checkValidity($event)" 
                required>
         <span class="mdc-text-field__label">Last Name</span>
       </label>
@@ -34,7 +34,7 @@
                class="mdc-text-field__input"
                (focus)="onFocus($event)" 
                (blur)="onBlur($event)"
-               (keyup)="checkValidity($event)" 
+               (change)="checkValidity($event)" 
                required>
         <span class="mdc-text-field__label">Email</span>
       </label>
@@ -47,7 +47,7 @@
                pattern="[A-Za-z]{2,}"
                (focus)="onFocus($event)" 
                (blur)="onBlur($event)"
-               (keyup)="checkValidity($event)" 
+               (change)="checkValidity($event)" 
                [required]="!formDisabled"
                [disabled]="formDisabled">
         <span class="mdc-text-field__label">First Name</span>
@@ -58,7 +58,7 @@
                pattern="[A-Za-z]{2,}"
                (focus)="onFocus($event)" 
                (blur)="onBlur($event)"
-               (keyup)="checkValidity($event)" 
+               (change)="checkValidity($event)" 
                [required]="!formDisabled"
                [disabled]="formDisabled">
         <span class="mdc-text-field__label">Last Name</span>
