Always have submit button enabled...for now

--- a/src/components/join-the-brag/join-the-brag.html
+++ b/src/components/join-the-brag/join-the-brag.html
@@ -72,6 +72,6 @@
         <span class="mdc-text-field__label">Reason for Nomination</span>
       </label>
     </div>
-    <input type="submit" class="mdc-button mdc-button--raised" [class.disabled-btn]="submitDisabled" [disabled]="submitDisabled">
+    <input type="submit" class="mdc-button mdc-button--raised">
   </form>
 </div>
